<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:background="@color/menu_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <cl.entel.appswlsdesa.view.EntelPortTextView android:textSize="@dimen/portabilidad_title_text_size" android:textStyle="bold" android:textColor="@color/entel_orange" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_actualizacion" />
            <RelativeLayout android:paddingTop="@dimen/portabilidad_block_padding" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <cl.entel.appswlsdesa.view.EntelPortTextView android:textSize="@dimen/portabilidad_subtitle_text_size" android:textColor="@color/entel_orange" android:id="@id/par" android:paddingRight="@dimen/portabilidad_parentesis_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="{" />
                <cl.entel.appswlsdesa.view.EntelPortTextView android:textSize="@dimen/portabilidad_subtitle_text_size" android:textColor="@color/gray_actualiza" android:id="@id/actualiza_mainmessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actualiza_tu_agenda" android:layout_toRightOf="@id/par" />
            </RelativeLayout>
            <TextView android:textSize="@dimen/portabilidad_text_size" android:id="@id/actualiza_detailmessage" android:paddingBottom="@dimen/portabilidad_block_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/actualiza_detalle" />
            <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
                <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_size" android:textColor="@color/menu_background" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn" android:background="@color/splash_bg" android:padding="10.0sp" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/btn_continuar" android:layout_weight="0.5" />
            </LinearLayout>
            <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_size" android:textColor="@color/splash_bg" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn_backup" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_backup" />
            <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_size" android:textColor="@color/splash_bg" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn_volver" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_volver" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <TextView android:textSize="@dimen/portabilidad_footer2_size" android:textColor="@color/gray3_actualiza" android:gravity="center_horizontal" android:paddingTop="15.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/copyright" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>