<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/menu_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/contactListView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="@color/menu_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_size" android:textColor="@color/menu_background" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn" android:background="@color/splash_bg" android:padding="10.0sp" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/btn_continuar" android:layout_weight="0.5" />
            <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_size" android:textColor="@color/splash_bg" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn_backup" android:background="@android:color/transparent" android:padding="10.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/btn_backup" android:layout_weight="0.4" />
            <cl.entel.appswlsdesa.view.EntelButton android:textSize="@dimen/portabilidad_button_volver_size" android:textColor="@color/splash_bg" android:layout_gravity="center_horizontal" android:id="@id/actualiza_btn_volver" android:background="@android:color/transparent" android:padding="10.0sp" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/btn_volver" android:layout_weight="0.4" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>